--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <script src="scripts/d3.js"></script>
   <script src="scripts/queue.js"></script>
   <script src="scripts/topojson.js"></script>
-  <script src="scripts/app.js"></script>
+  <script src="scripts/app-2.js"></script>
 </body>
 </html>
