--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
       <div class="map-country-course-boolean"></div>
     </div>
 
+    <div class="map-scroll-hide">
+      <div class="map-key_wrapper"></div>
+    </div>
+
   </div>
 
   <script src="scripts/d3.js"></script>
   <script src="scripts/queue.js"></script>
   <script src="scripts/topojson.js"></script>
-  <script src="scripts/app-2.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
